<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_user.AddUserFragment"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageViewUserPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/photo_user_icon"
        android:layout_gravity="center_horizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:helperText="@string/helper_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:helperText="@string/helper_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName" />
    </com.google.android.material.textfield.TextInputLayout>


   <!-- <TextView
        android:id="@+id/textViewNameUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ID"
        android:textColor="@color/whitesmoke"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>-->

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ID"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CargoRol"
            android:textColor="@color/whitesmoke"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinner_cargoRol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:entries="@array/cargos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_date"
            android:layout_weight="0.4"/>

    </LinearLayout>


    <Button
        android:id="@+id/buttonAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddUser"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>